<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDetailsFragment">

    <TextView
        android:id="@+id/tvDetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_cName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvDetEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_CEmail"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvDetName"
        app:layout_constraintTop_toBottomOf="@+id/tvDetName" />


    <TextView
        android:id="@+id/tvDetPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_phone"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvDetEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvDetEmail" />


    <TextView
        android:id="@+id/tvDetType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_c_type"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvDetPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvDetPhone" />


    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/label_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/label_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDetName" />

    <TextView
        android:id="@+id/tvCEmailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvCNameValue" />

    <TextView
        android:id="@+id/tvCPhoneValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="@+id/tvCEmailValue" />

    <TextView
        android:id="@+id/tvCTypeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvCPhoneValue" />

</androidx.constraintlayout.widget.ConstraintLayout>